--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lucide": "^0.378.0",
     "lucide-react": "^0.378.0",
     "next": "13.5.6",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.3.0",
