--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "flowbite-react": "^0.9.0",
+    "framer-motion": "^11.2.6",
     "lucide": "^0.378.0",
     "lucide-react": "^0.378.0",
     "next": "13.5.6",
