--- a/package.json
+++ b/package.json
@@ -27,13 +27,14 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "flowbite-react": "^0.9.0",
-    "framer-motion": "^11.2.6",
+    "framer-motion": "^11.2.10",
     "lucide": "^0.378.0",
     "lucide-react": "^0.378.0",
     "next": "13.5.6",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.5",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
