--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^2.0.3",
     "@heroicons/react": "^2.1.3",
+    "@prisma/client": "^5.14.0",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -24,6 +25,9 @@
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@react-email/components": "0.0.19",
+    "@types/bcrypt": "^5.0.2",
+    "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "flowbite-react": "^0.9.0",
@@ -32,8 +36,13 @@
     "lucide-react": "^0.378.0",
     "next": "13.5.6",
     "next-themes": "^0.3.0",
+    "prisma": "^5.14.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-email": "2.1.4",
+    "react-hook-form": "^7.51.5",
+    "react-hot-toast": "^2.4.1",
+    "resend": "3.2.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
