--- a/package.json
+++ b/package.json
@@ -3,15 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev, email dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.2.0",
     "@headlessui/react": "^2.0.3",
     "@heroicons/react": "^2.1.3",
-    "@prisma/client": "^5.14.0",
+    "@hookform/resolvers": "^3.4.2",
+    "@prisma/client": "^5.15.0",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -32,9 +34,11 @@
     "clsx": "^2.1.1",
     "flowbite-react": "^0.9.0",
     "framer-motion": "^11.2.6",
+    "input-otp": "^1.2.4",
     "lucide": "^0.378.0",
     "lucide-react": "^0.378.0",
     "next": "13.5.6",
+    "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
     "prisma": "^5.14.0",
     "react": "^18",
@@ -42,9 +46,11 @@
     "react-email": "2.1.4",
     "react-hook-form": "^7.51.5",
     "react-hot-toast": "^2.4.1",
-    "resend": "3.2.0",
+    "react-icons": "^5.2.1",
+    "resend": "^3.2.0",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
