--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,7 @@
       "DATABASE_URL": "mongodb+srv://clinicease:83pgk7lqO0twAxtv@clinicease.hz1wmps.mongodb.net/ClinicApp"
     },
     "build": {
-      "commands": {
+      "build": {
         "build": "prisma generate"
       }
     }
