vercel deployment error debug 03

--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,6 @@
     "env": {
       "DATABASE_URL": "mongodb+srv://clinicease:83pgk7lqO0twAxtv@clinicease.hz1wmps.mongodb.net/ClinicApp"
     },
-    "build": {  
-        "build": "prisma generate"
-      }
-    }
+    "buildCommand": "prisma generate"
+}
+    
