--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall":"prisma generate"
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.2.0",
@@ -15,12 +15,15 @@
     "@heroicons/react": "^2.1.3",
     "@hookform/resolvers": "^3.4.2",
     "@prisma/client": "^5.15.0",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-progress": "^1.0.3",
+    "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
@@ -33,6 +36,7 @@
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
     "flowbite-react": "^0.9.0",
     "framer-motion": "^11.2.6",
     "input-otp": "^1.2.4",
@@ -41,7 +45,6 @@
     "next": "13.5.6",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
-    "prisma": "^5.14.0",
     "react": "^18",
     "react-dom": "^18",
     "react-email": "2.1.4",
@@ -62,6 +65,7 @@
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
     "postcss": "^8",
+    "prisma": "^5.15.0",
     "tailwindcss": "^3",
     "typescript": "^5"
   }
